deployment/deployment_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: ntc-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntc-api
  template:
    metadata:
      labels:
        app: ntc-api
    spec:
      containers:
      - name: api
        image: swamp1820/ntc-api
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 1G
            cpu: '1'
          requests:
            memory: 100Mi
            cpu: '0.1'
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: ntc-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
