deployment/deployment_client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: ntc-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntc-client
  template:
    metadata:
      labels:
        app: ntc-client
    spec:
      containers:
      - name: client
        image: swamp1820/ntc-client
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 1G
            cpu: '1'
          requests:
            memory: 100Mi
            cpu: '0.1'
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: ntc-client
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
